# macula-os

./: .gitignore  BUILD.md  Dockerfile.dapper  README.md  go.mod  go.sum  install.sh  main.go
.github/workflows/: build.yml
cmd/macula-firstboot/: main.go
cmd/macula-firstboot/static/: style.css
cmd/macula-firstboot/templates/: index.html
images/00-base/: Dockerfile
images/03-base/: Dockerfile
images/05-base/: Dockerfile
images/10-gobuild/: gobuild
images/10-k3s/: Dockerfile
images/10-kernel-stage1/: Dockerfile
images/20-progs/: Dockerfile
images/20-rootfs/: Dockerfile
images/30-bin/: Dockerfile
images/40-kernel/: Dockerfile
images/50-package/: Dockerfile
images/60-package/: Dockerfile
images/70-iso/: Dockerfile  config.yaml  grub.cfg  run-kvm.sh
images/80-tar/: Dockerfile
images/output/01-full/: Dockerfile
images/output/01-lite/: Dockerfile
overlay/: init
overlay/etc/: issue  motd
overlay/etc/avahi/: avahi-daemon.conf
overlay/etc/avahi/services/: macula.service
overlay/etc/init.d/: ccapply  health-daemon  macula-bootstrap  macula-firstboot  macula-gateway  macula-mesh  nats-server  soft-serve  spegel  watchdog
overlay/etc/macula/: banner.txt  config.yaml.example  fastfetch.jsonc  logo.txt  nats.conf
overlay/etc/profile.d/: macula-firstboot.sh  macula-welcome.sh
overlay/lib/: os-release
overlay/libexec/macula/: boot  bootstrap  functions  live  mode  mode-disk  mode-local  mode-shell
overlay/sbin/: update-issue
overlay/usr/sbin/: watchdog-daemon
package/: Dockerfile
package/packer/aws/: config.yaml
package/packer/gcp/: config.yaml
package/packer/hetzner/: config.yaml
package/packer/openstack/: config.yaml
package/packer/vagrant/: config.yml
package/packer/vagrant-libvirt/: config.yml
pkg/cc/: apply.go  funcs.go
pkg/cli/app/: app.go
pkg/cli/backup/: backup.go
pkg/cli/config/: config.go
pkg/cli/diag/: diag.go
pkg/cli/encrypt/: encrypt.go
pkg/cli/health/: health.go
pkg/cli/install/: install.go
pkg/cli/mesh/: mesh.go
pkg/cli/rc/: rc.go
pkg/cli/reset/: reset.go
pkg/cli/upgrade/: upgrade.go
pkg/cliinstall/: ask.go  install.go
pkg/config/: config.go  read.go  read_cc.go  read_test.go  write.go
pkg/enterchroot/: ensureloop.go  enter.go
pkg/hostname/: hostname.go
pkg/mode/: mode.go
pkg/module/: module.go
pkg/ssh/: ssh.go
pkg/sysctl/: sysctl.go
pkg/system/: system.go
pkg/transferroot/: transferroot.go
pkg/writefile/: writefile.go
plans/: EXPLORATION_BEAM_NATIVE_GITOPS.md  EXPLORATION_FRONTEND_WEB_TUI_APP_LAUNCHER.md  EXPLORATION_NIXOS_BASE.md  EXPLORATION_SECRETS.md  EXPLORATION_STORAGE.md  EXPLORATION_TUI_MULTIPLEXER.md  PLAN_BSD_OPTION.md  PLAN_MACULAOS.md  PLAN_MACULAOS_2.md  PLAN_MACULAOS_LITE.md
rust/: .gitignore  Cargo.toml
rust/crates/macula-tui/: Cargo.toml
rust/crates/macula-tui-common/: Cargo.toml
rust/crates/macula-tui-common/src/: lib.rs  theme.rs
rust/crates/macula-tui-common/src/widgets/: input.rs  logo.rs  mod.rs  progress.rs
rust/crates/macula-tui/src/: app.rs  main.rs  nats.rs
rust/crates/macula-tui/src/views/: apps.rs  dashboard.rs  logs.rs  mod.rs  peers.rs
rust/crates/macula-wizard/: Cargo.toml
rust/crates/macula-wizard/src/: app.rs  config.rs  main.rs
rust/crates/macula-wizard/src/steps/: mod.rs
scripts/: download-airgap-images.sh  fix-println-newlines.sh  generate-banners.sh  images  package  rebrand-config-struct.sh  rebrand-images.sh  rebrand-macula-to-maculaos.sh  rebrand-overlay.sh  rebrand-scripts.sh  run  run-qemu  setup-buildx.sh  version  write-usb.sh
(+7 files in other folders)
